--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,37 +1,28 @@
 {
-  "name": "pollachi-palani-tourism",
-  "version": "0.1.0",
+  "name": "tourism-frontend",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
-    "axios": "^1.7.9",
+    "@tailwindcss/postcss": "^4.2.1",
+    "axios": "^1.13.5",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.18.2",
-    "leaflet": "^1.9.4",
-    "lucide-react": "^0.468.0",
-    "next": "^16.1.6",
-    "next-themes": "^0.4.4",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-leaflet": "^5.0.0",
-    "swiper": "^11.1.14",
-    "tailwind-merge": "^2.6.0"
+    "framer-motion": "^12.34.3",
+    "next": "latest",
+    "next-themes": "^0.4.6",
+    "react": "latest",
+    "react-dom": "latest",
+    "swiper": "^12.1.2",
+    "tailwind-merge": "^3.5.0"
   },
   "devDependencies": {
-    "@types/leaflet": "^1.9.21",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^8",
-    "eslint-config-next": "15.1.0",
-    "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.17",
-    "typescript": "^5"
+    "autoprefixer": "^10.4.24",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.19",
+    "typescript": "^5.9.3"
   }
 }
