--- a/package.json
+++ b/package.json
@@ -7,6 +7,12 @@
     "start": "concurrently \"npm run backend\" \"npm run frontend\""
   },
   "dependencies": {
-    "concurrently": "^8.2.2"
+    "clsx": "^2.1.1",
+    "concurrently": "^8.2.2",
+    "framer-motion": "^12.34.3",
+    "next-themes": "^0.4.6",
+    "swiper": "^12.1.2",
+    "tailwind-merge": "^3.5.0",
+    "typescript": "^5.9.3"
   }
 }
